@@ -5,6 +5,7 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="halign">center</property>
+    <property name="hexpand">True</property>
     <property name="margin_bottom">10</property>
     <property name="margin_top">0</property>
     <property name="margin_start">10</property>
@@ -28,105 +29,84 @@
             <property name="position">0</property>
         </packing>
     </child>
+    <!-- options -->
     <child>
-        <object class="GtkBox" id="rank_box">
-            <property name="hexpand">True</property>
+        <object class="GtkBox" id="center_box">
             <property name="orientation">horizontal</property>
-            <property name="margin_top">10</property>
-            <property name="margin_left">190</property>
+            <property name="halign">center</property>
             <child>
-                <object class="GtkRadioButton" id="rank_radiobutton">
-                    <property name="label" translatable="yes"></property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="halign">start</property>
-                    <property name="always_show_image">True</property>
-                    <property name="active">True</property>
-                    <property name="draw_indicator">True</property>-->
-                    <signal name="toggled" handler="on_rank_radiobutton_toggled" swapped="no"/>
+                <object class="GtkBox" id="rank_box">
+                    <property name="orientation">vertical</property>
+                    <property name="margin_top">10</property>
+                    <child>
+                        <object class="GtkRadioButton" id="rank_radiobutton">
+                            <property name="label" translatable="yes"></property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="halign">start</property>
+                            <property name="active">True</property>
+                            <property name="draw_indicator">True</property>-->
+                            <signal name="toggled" handler="on_rank_radiobutton_toggled" swapped="no"/>
+                        </object>
+                        <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
+                        </packing>
+                    </child>
+                    <child>
+                        <object class="GtkRadioButton" id="leave_radiobutton">
+                            <property name="label" translatable="yes"></property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="halign">start</property>
+                            <property name="active">True</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">rank_radiobutton</property>
+                            <signal name="toggled" handler="on_leave_radiobutton_toggled" swapped="no"/>
+                        </object>
+                        <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                        </packing>
+                    </child>
+                    <child>
+                        <object class="GtkRadioButton" id="user_radiobutton">
+                            <property name="label" translatable="yes"></property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="halign">start</property>
+                            <property name="active">True</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">rank_radiobutton</property>
+                            <signal name="toggled" handler="on_user_radiobutton_toggled" swapped="no"/>
+                        </object>
+                        <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">2</property>
+                        </packing>
+                    </child>
                 </object>
                 <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">1</property>
+                    <property name="position">0</property>
                 </packing>
             </child>
         </object>
         <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
+            <!--<property name="position">1</property>-->
             <property name="position">1</property>
         </packing>
     </child>
-    <!-- end of rank mirrors -->
-    <!-- Leave mirror list as it is -->
-    <child>
-        <object class="GtkBox" id="leave_box">
-            <property name="hexpand">True</property>
-            <property name="orientation">horizontal</property>
-            <property name="margin_top">10</property>
-            <property name="margin_left">190</property>
-            <child>
-                <object class="GtkRadioButton" id="leave_radiobutton">
-                    <property name="label" translatable="yes"></property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="halign">start</property>
-                    <property name="always_show_image">True</property>
-                    <property name="active">True</property>
-                    <property name="draw_indicator">True</property>
-                    <property name="group">rank_radiobutton</property>
-                    <signal name="toggled" handler="on_leave_radiobutton_toggled" swapped="no"/>
-                </object>
-                <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">1</property>
-                </packing>
-            </child>
-        </object>
-        <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">2</property>
-        </packing>
-    </child>
-    <!-- end of leave mirror list as it is -->
-    <!-- Let user select mirrors -->
-    <child>
-        <object class="GtkBox" id="user_box">
-            <property name="hexpand">True</property>
-            <property name="orientation">horizontal</property>
-            <property name="margin_top">10</property>
-            <property name="margin_left">190</property>
-            <child>
-                <object class="GtkRadioButton" id="user_radiobutton">
-                    <property name="label" translatable="yes"></property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="halign">start</property>
-                    <property name="always_show_image">True</property>
-                    <property name="active">True</property>
-                    <property name="draw_indicator">True</property>
-                    <property name="group">rank_radiobutton</property>
-                    <signal name="toggled" handler="on_user_radiobutton_toggled" swapped="no"/>
-                </object>
-                <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">1</property>
-                </packing>
-            </child>
-        </object>
-        <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">3</property>
-        </packing>
-    </child>
+
     <!-- mirror list listboxes -->
     <child>
         <object class="GtkBox" id="listboxes_box">
@@ -181,7 +161,7 @@
         <packing>
             <property name="expand">True</property>
             <property name="fill">True</property>
-            <property name="position">4</property>
+            <property name="position">2</property>
         </packing>
     </child>
 </object>
