@@ -1,3 +1,4 @@
+[2017-08-30 15:48:44 +0200]  Better radiobuttons placement in mirrors screen                            karasu      {d87e2356}
 [2017-08-30 12:37:43 +0200]  Fix location listbox labels size (was too small)                           karasu      {1298d5f2}
 [2017-08-30 11:41:22 +0200]  Fix typo and add a debug warning                                           karasu      {1e4b10d9}
 [2017-08-30 04:07:45 +0200]  Fixed two unused variables (antbs)                                         karasu      {d05a241d}
